client/styles/stylesheet.css
/* ... */
.rolesTable td:nth-child(4) {
  background: #e7f3d4;
  background: rgba(184,243,85,0.3);
}

/*Header*/
.rolesTable thead td {
  font: bold 1.3em 'trebuchet MS', 'Lucida Sans', Arial;
  border-radius-topright: 10px;
  border-radius-topleft: 10px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  border-top: 1px solid #eaeaea;
}

.rolesTable thead td:first-child {
  border-top: none;
}

/*Footer*/
.rolesTable tfoot td {
  font: bold 1.4em Georgia;
  border-radius-bottomright: 10px;
  border-radius-bottomleft: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border-bottom: 1px solid #dadada;
}

.rolesTable tfoot td:first-child {
  border-bottom: none;
}

/*END USER DEFINITIONS TABLE*/


/*START PERMISSIONS TABLE */

table {
  width: 100%;
  border-collapse: collapse;
}
/* Zebra striping */
tr:nth-of-type(odd) {
  background: #eee;
}
th {
  background: #333;
  color: white;
  font-weight: bold;
}
td, th {
  padding: 6px;
  border: 1px solid #ccc;
  text-align: left;
}



/*
Max width before this PARTICULAR table gets nasty
This query will take effect for any screen smaller than 760px
and also iPads specifically.
*/
@media
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

	.permissionsTable {
		display: block;
		position: relative;
		width: 100%;

		&:after {
			clear: both;
			content: '';
			display: block;
			font-size: 0;
			height: 0;
			visibility: hidden;
		}

		tbody {
			display: block;
			overflow-x: auto;
			position: relative;
			white-space: nowrap;
			width: auto;


			tr {
				display: inline-block;
				vertical-align: top;

				td {
					display: block;
					text-align: center;

					&:first-child {
						text-align: left;
					}
				}
			}
		}

		thead {
			display: block;
			float: left;
			margin-right: 10px;

			&:after {
				clear: both;
				content: "";
				display: block;
				font-size: 0;
				height: 0;
				visibility: hidden;
			}

			th:first-of-type {
				height: 1.4em;
			}

			th {
				display: block;
				text-align: right;

				&:first-child {
					text-align: right;
				}
			}
		}
	}
}

/*END PERMISSIONS TABLE */



.newTicketForm {
  background-color: #FFEDD3;
  margin-top: 20px;
  padding: 10px;
  border-radius: 2px;
}

.editTicketForm {
  background-color: #5D5D5D;
  margin-top: 20px;
  padding: 10px;
  border-radius: 2px;
}

#searchBar {
  position: relative;
  margin-left: 70px;
  font-size: 14px;
  width:300px;
  height: 35px;
}

.ticketsAndSearch {
  margin: 30px;
  display: flex;
  justify-content: space-around;
  border-color: black;
  border-width: 1;
}

.modalDialog {
	position: fixed;
	font-family: Arial, Helvetica, sans-serif;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
	z-index: 9998;
	opacity:0;
	-webkit-transition: opacity 400ms ease-in;
	-moz-transition: opacity 400ms ease-in;
	transition: opacity 400ms ease-in;
  pointer-events: none;
}

.modalDialog:target {
	opacity:1;
	pointer-events: auto;
}

.modalDialog > div {
	width: 800px;
  max-height: 500px;
  overflow-y: auto;
	position: relative;
	margin: 10% auto;
	padding: 5px 20px 13px 20px;
	border-radius: 10px;
	background: #fff;
	background: -moz-linear-gradient(#fff, #999);
	background: -webkit-linear-gradient(#fff, #999);
	background: -o-linear-gradient(#fff, #999);
}

.ticketModalDialog {
	position: fixed;
	font-family: Arial, Helvetica, sans-serif;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
	z-index: 9998;
	/*opacity:0;*/
	-webkit-transition: opacity 400ms ease-in;
	-moz-transition: opacity 400ms ease-in;
	transition: opacity 400ms ease-in;
}

.ticketModalDialog > div {
	width: 800px;
  max-height: 500px;
  overflow-y: auto;
	position: relative;
	margin: 10% auto;
	padding: 5px 20px 13px 20px;
	border-radius: 10px;
	background: #fff;
	background: -moz-linear-gradient(#fff, #999);
	background: -webkit-linear-gradient(#fff, #999);
	background: -o-linear-gradient(#fff, #999);
}

.settingsTable {
  background-color: #D9D9D9;
}

.profilePicture {
  width: 380px;
  height: 340px;
  margin-bottom: 30px;
}

.closeModal {
	background: #606061;
	color: #FFFFFF;
	line-height: 25px;
	position: absolute;
	text-align: center;
  right: 3px;
	top: 3px;
	width: 24px;
	text-decoration: none;
	font-weight: bold;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
	-moz-box-shadow: 1px 1px 3px #000;
	-webkit-box-shadow: 1px 1px 3px #000;
	box-shadow: 1px 1px 3px #000;
}

.closeModal:hover { background: #00d9ff; }

.createTicketButton {
  margin-bottom: 30px;
}

.linkMargins {
  margin-right: 30px;
}

.browseArticles {
  margin-left: 30px;
}

.loginTop {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  color: #9d9d9d;
  height: 60px;
  width: 100%;
  top: 0px;
  background-color: #fcf6d7;
}

.loginTopTrim {
  position: absolute;
  height: 15px;
  width: 100%;
  top: 60px;
  background-color: #333;
}

.loginSignupContainer {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  justify-content: center;
  border-color: black;
  border-width: 1px;
  border-radius: 3px;
  margin: 30px;
}

#beefaloLogo {
  width: 50px;
  height: 50px;
  margin-right: 20px;
}

.openTicketColor {
  background-color: green;
}

.centerFlex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  top:0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.centerItem {
  align-self: center;
}

.rowFlexClose {
  display: flex;
  flex-flow: row wrap;
}

.rowFlex {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.hidden {
  display: none;
}

body {margin: 0;}

.centerText {
  text-align: center;
}

.brownBackground {
  background-color: #a58c63;
}
/* ... */

